python code! TCP server

--- a/RSP.ipynb
+++ b/RSP.ipynb
@@ -1,238 +1,212 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "jgsFoGEDYU1A"
+   },
+   "source": [
+    "# 🔗 RSP (Resource Sharing Protocol) — Colab Demo\n",
+    "\n",
+    "This notebook demonstrates the core logic of **RSP**, a custom binary protocol for buying/selling virtual machines (VMs) securely.\n",
+    "\n",
+    "### ✅ Features\n",
+    "\n",
+    "- High-performance binary protocol (MessagePack + struct)\n",
+    "- Packet header format (8 bytes: CMD_ID, FLAGS, LENGTH, RESERVED)\n",
+    "- Secure VM access via SSH (simulated)\n",
+    "- Basic escrow logic with buyer/seller flow\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Header\n",
+    "```\n",
+    "RSP_VER   : 1   → protocol version 1\n",
+    "VPN_FLAG  : 1   → tunneled through VPN\n",
+    "CMD_ID    : 1   → REQUEST_VM\n",
+    "FLAGS     : 6   → Encrypted + High Priority\n",
+    "BODY_LEN  : 48  → 0x0030 (big endian)\n",
+    "RESERVED  : 00 00 00 00\n",
+    "```\n",
+    "\n",
+    "## 📦 Packet Format\n",
+    "\n",
+    "```\n",
+    "\n",
+    "\\[CMD\\_ID:1]\\[FLAGS:1]\\[BODY\\_LEN:2]\\[RESERVED:4]\\[BODY:...]\n",
+    "\n",
+    "````\n",
+    "\n",
+    "- `CMD_ID=1` → `REQUEST_VM`\n",
+    "- `FLAGS=6`  → `Encrypted + High Priority`\n",
+    "- `BODY`     → MessagePack dict\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🚀 Run in Colab\n",
+    "\n",
+    "```python\n",
+    "!pip install msgpack\n",
+    "````\n",
+    "\n",
+    "Then run the notebook cells to:\n",
+    "\n",
+    "1. Construct and send RSP packets\n",
+    "2. Parse and print headers\n",
+    "3. Decode and inspect payloads\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 💡 Example Payload\n",
+    "\n",
+    "```json\n",
+    "{\n",
+    "  \"cpu\": 2,\n",
+    "  \"ram\": 4,\n",
+    "  \"duration\": 60,\n",
+    "  \"provider\": \"qemu\"\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🧠 Next Steps\n",
+    "\n",
+    "* Add real SSH validation for VMs\n",
+    "* Integrate escrow logic\n",
+    "* Wrap in OpenVPN + TLS for secure communication\n",
+    "* Signature In-Body\n",
+    "* Session ID\n",
+    "* 🔐 Zero-Knowledge Proof field for spec validation\n",
+    "\n",
+    "* 🛠 Command negotiation\n",
+    "* 📊 Usage telemetry *(client asks which VM providers are supported)*\n",
+    "\n",
+    "---\n",
+    "\n",
+    "*MIT License | Author: Bader Alotaibi*\n"
+   ]
   },
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# 🔗 RSP (Resource Sharing Protocol) — Colab Demo\n",
-        "\n",
-        "This notebook demonstrates the core logic of **RSP**, a custom binary protocol for buying/selling virtual machines (VMs) securely.\n",
-        "\n",
-        "### ✅ Features\n",
-        "\n",
-        "- High-performance binary protocol (MessagePack + struct)\n",
-        "- Packet header format (8 bytes: CMD_ID, FLAGS, LENGTH, RESERVED)\n",
-        "- Secure VM access via SSH (simulated)\n",
-        "- Basic escrow logic with buyer/seller flow\n",
-        "\n",
-        "---\n",
-        "\n",
-        "## Header\n",
-        "```\n",
-        "RSP_VER   : 1   → protocol version 1\n",
-        "VPN_FLAG  : 1   → tunneled through VPN\n",
-        "CMD_ID    : 1   → REQUEST_VM\n",
-        "FLAGS     : 6   → Encrypted + High Priority\n",
-        "BODY_LEN  : 48  → 0x0030 (big endian)\n",
-        "RESERVED  : 00 00 00 00\n",
-        "```\n",
-        "\n",
-        "## 📦 Packet Format\n",
-        "\n",
-        "```\n",
-        "\n",
-        "\\[CMD\\_ID:1]\\[FLAGS:1]\\[BODY\\_LEN:2]\\[RESERVED:4]\\[BODY:...]\n",
-        "\n",
-        "````\n",
-        "\n",
-        "- `CMD_ID=1` → `REQUEST_VM`\n",
-        "- `FLAGS=6`  → `Encrypted + High Priority`\n",
-        "- `BODY`     → MessagePack dict\n",
-        "\n",
-        "---\n",
-        "\n",
-        "## 🚀 Run in Colab\n",
-        "\n",
-        "```python\n",
-        "!pip install msgpack\n",
-        "````\n",
-        "\n",
-        "Then run the notebook cells to:\n",
-        "\n",
-        "1. Construct and send RSP packets\n",
-        "2. Parse and print headers\n",
-        "3. Decode and inspect payloads\n",
-        "\n",
-        "---\n",
-        "\n",
-        "## 💡 Example Payload\n",
-        "\n",
-        "```json\n",
-        "{\n",
-        "  \"cpu\": 2,\n",
-        "  \"ram\": 4,\n",
-        "  \"duration\": 60,\n",
-        "  \"provider\": \"qemu\"\n",
-        "}\n",
-        "```\n",
-        "\n",
-        "---\n",
-        "\n",
-        "## 🧠 Next Steps\n",
-        "\n",
-        "* Add real SSH validation for VMs\n",
-        "* Integrate escrow logic\n",
-        "* Wrap in OpenVPN + TLS for secure communication\n",
-        "* Signature In-Body\n",
-        "* Session ID\n",
-        "* 🔐 Zero-Knowledge Proof field for spec validation\n",
-        "\n",
-        "* 🛠 Command negotiation\n",
-        "* 📊 Usage telemetry *(client asks which VM providers are supported)*\n",
-        "\n",
-        "---\n",
-        "\n",
-        "*MIT License | Author: Bader Alotaibi*\n"
-      ],
-      "metadata": {
-        "id": "jgsFoGEDYU1A"
-      }
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "7hWG06PRVb3C"
+   },
+   "outputs": [],
+   "source": [
+    "import msgpack\n",
+    "import struct\n",
+    "import binascii\n",
+    "import json\n",
+    "\n",
+    "# Header info\n",
+    "RSP_VER = 1\n",
+    "VPN_FLAG = 0\n",
+    "cmd_id = 1       # REQUEST_VM\n",
+    "flags = 0        # No special flags\n",
+    "#body_len = len(body)\n",
+    "reserved = b'\\x00\\x00\\x00\\x00'\n",
+    "\n",
+    "\n",
+    "# Construct payload\n",
+    "payload = {\n",
+    "  \"cpu\": 2,\n",
+    "  \"ram\": 4,\n",
+    "  \"duration\": 60,\n",
+    "  \"provider\": \"qemu\"\n",
+    "}\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "Fxi3u9IDYEbk"
+   },
+   "outputs": [],
+   "source": [
+    "# Mapping for command IDs\n",
+    "CMD_ID_MAP = {\n",
+    "    1: \"REQUEST_VM\",\n",
+    "    2: \"VM_OFFER\",\n",
+    "    3: \"ACCEPT_OFFER\",\n",
+    "    4: \"VM_READY\",\n",
+    "    5: \"ESCROW_RESULT\",\n",
+    "    0xFF: \"ERROR\"\n",
+    "}\n",
+    "\n",
+    "# Mapping for flags (bitwise)\n",
+    "FLAGS_MAP = {\n",
+    "    0: \"No flags\",\n",
+    "    1: \"ACK\",\n",
+    "    2: \"Encrypted\",\n",
+    "    4: \"High Priority\"\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "Kq6wCgfwXCBI"
+   },
+   "outputs": [],
+   "source": [
+    "body = msgpack.packb(payload)\n",
+    "body_len = len(body)\n",
+    "# Pack header\n",
+    "header = struct.pack(\">BBH4s\", cmd_id, flags, body_len, reserved)\n",
+    "\n",
+    "# Combine header + body\n",
+    "packet = header + body"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
     },
-    {
-      "cell_type": "code",
-      "execution_count": 13,
-      "metadata": {
-        "id": "7hWG06PRVb3C"
-      },
-      "outputs": [],
-      "source": [
-        "import msgpack\n",
-        "import struct\n",
-        "import binascii\n",
-        "import json\n",
-        "\n",
-        "# Header info\n",
-        "RSP_VER = 1\n",
-        "VPN_FLAG = 0\n",
-        "cmd_id = 1       # REQUEST_VM\n",
-        "flags = 0        # No special flags\n",
-        "#body_len = len(body)\n",
-        "reserved = b'\\x00\\x00\\x00\\x00'\n",
-        "\n",
-        "\n",
-        "# Construct payload\n",
-        "payload = {\n",
-        "  \"cpu\": 2,\n",
-        "  \"ram\": 4,\n",
-        "  \"duration\": 60,\n",
-        "  \"provider\": \"qemu\"\n",
-        "}\n",
-        "\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Mapping for command IDs\n",
-        "CMD_ID_MAP = {\n",
-        "    1: \"REQUEST_VM\",\n",
-        "    2: \"VM_OFFER\",\n",
-        "    3: \"ACCEPT_OFFER\",\n",
-        "    4: \"VM_READY\",\n",
-        "    5: \"ESCROW_RESULT\",\n",
-        "    0xFF: \"ERROR\"\n",
-        "}\n",
-        "\n",
-        "# Mapping for flags (bitwise)\n",
-        "FLAGS_MAP = {\n",
-        "    0: \"No flags\",\n",
-        "    1: \"ACK\",\n",
-        "    2: \"Encrypted\",\n",
-        "    4: \"High Priority\"\n",
-        "}\n"
-      ],
-      "metadata": {
-        "id": "Fxi3u9IDYEbk"
-      },
-      "execution_count": 14,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "body = msgpack.packb(payload)\n",
-        "body_len = len(body)\n",
-        "# Pack header\n",
-        "header = struct.pack(\">BBH4s\", cmd_id, flags, body_len, reserved)\n",
-        "\n",
-        "# Combine header + body\n",
-        "packet = header + body"
-      ],
-      "metadata": {
-        "id": "Kq6wCgfwXCBI"
-      },
-      "execution_count": 15,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "\n",
-        "# ----- Pretty Print -----\n",
-        "print(\"\\n📦 Full RSP Packet (raw bytes):\")\n",
-        "print(binascii.hexlify(packet, \" \").decode().upper())\n",
-        "\n",
-        "print(\"\\n🔍 Parsed RSP Header:\")\n",
-        "print(f\"  RSP_VER  : {RSP_VER}\")\n",
-        "print(f\"  VPN_FLAG : {VPN_FLAG}\")\n",
-        "print(f\"  CMD_ID   : {cmd_id} ({CMD_ID_MAP.get(cmd_id, 'UNKNOWN')})\")\n",
-        "print(f\"  FLAGS    : {flags} ({FLAGS_MAP.get(flags, 'Unknown or Multiple Flags')})\")\n",
-        "print(f\"  BODY_LEN : {body_len} bytes\")\n",
-        "print(f\"  RESERVED : {binascii.hexlify(reserved).decode().upper()}\")\n",
-        "\n",
-        "print(\"\\n📨 Decoded Payload (MessagePack → JSON):\")\n",
-        "print(json.dumps(msgpack.unpackb(body), indent=2))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "I5neG60-VmGn",
-        "outputId": "59fd6705-e379-4bf7-e489-6027412e1264"
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "📦 Full RSP Packet (raw bytes):\n",
-            "01 00 00 23 00 00 00 00 84 A3 63 70 75 02 A3 72 61 6D 04 A8 64 75 72 61 74 69 6F 6E 3C A8 70 72 6F 76 69 64 65 72 A4 71 65 6D 75\n",
-            "\n",
-            "🔍 Parsed RSP Header:\n",
-            "  RSP_VER  : 1\n",
-            "  VPN_FLAG : 0\n",
-            "  CMD_ID   : 1 (REQUEST_VM)\n",
-            "  FLAGS    : 0 (No flags)\n",
-            "  BODY_LEN : 35 bytes\n",
-            "  RESERVED : 00000000\n",
-            "\n",
-            "📨 Decoded Payload (MessagePack → JSON):\n",
-            "{\n",
-            "  \"cpu\": 2,\n",
-            "  \"ram\": 4,\n",
-            "  \"duration\": 60,\n",
-            "  \"provider\": \"qemu\"\n",
-            "}\n"
-          ]
-        }
-      ]
-    }
-  ]
+    "id": "I5neG60-VmGn",
+    "outputId": "59fd6705-e379-4bf7-e489-6027412e1264"
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# ----- Pretty Print -----\n",
+    "print(\"\\n📦 Full RSP Packet (raw bytes):\")\n",
+    "print(binascii.hexlify(packet, \" \").decode().upper())\n",
+    "\n",
+    "print(\"\\n🔍 Parsed RSP Header:\")\n",
+    "print(f\"  RSP_VER  : {RSP_VER}\")\n",
+    "print(f\"  VPN_FLAG : {VPN_FLAG}\")\n",
+    "print(f\"  CMD_ID   : {cmd_id} ({CMD_ID_MAP.get(cmd_id, 'UNKNOWN')})\")\n",
+    "print(f\"  FLAGS    : {flags} ({FLAGS_MAP.get(flags, 'Unknown or Multiple Flags')})\")\n",
+    "print(f\"  BODY_LEN : {body_len} bytes\")\n",
+    "print(f\"  RESERVED : {binascii.hexlify(reserved).decode().upper()}\")\n",
+    "\n",
+    "print(\"\\n📨 Decoded Payload (MessagePack → JSON):\")\n",
+    "print(json.dumps(msgpack.unpackb(body), indent=2))"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
